--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,15 @@
     <version>2.0</version>
     <name>junior</name>
     <url>http://job4j.ru/</url>
-
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <modules>
         <module>chapter_001</module>
         <module>chapter_002</module>
+        <module>chapter_003</module>
     </modules>
 <dependencies>
     <dependency>
