--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,15 @@
     <name>junior</name>
     <url>http://job4j.ru/</url>
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>12</maven.compiler.source>
+        <maven.compiler.target>12</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <modules>
         <module>chapter_001</module>
         <module>chapter_002</module>
         <module>chapter_003</module>
+        <module>chapter_004</module>
     </modules>
 <dependencies>
     <dependency>
